deploy/k8s/deployment-happybirthday.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: happybirthday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: happybirthday
  template:
    metadata:
      labels:
        app: happybirthday
    spec:

      containers:
        - name: happybirthday
          image: docker.io/anmobor/happybirthday:latest
          ports:
            - containerPort: 8000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - app1 # to place the pod on the node 1 with the label role=app1
