deploy/k8s/service-happybirthday.yaml
apiVersion: v1
kind: Service
metadata:
  name: happybirthday
spec:
  selector:
    app: happybirthday
  ports:
    - port: 8000
      targetPort: 8000
