deploy/k8s/service-simple-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
spec:
  selector:
    app: simple-app
  ports:
    - port: 8001
      targetPort: 8001
