deploy/k8s/happybirthday-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: happybirthday-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /happybirthday
            pathType: Prefix
            backend:
              service:
                name: happybirthday
                port:
                  number: 8000
          - path: /simple
            pathType: Prefix
            backend:
              service:
                name: simple-app
                port:
                  number: 8001
