deploy/k8s/networkpolicy-simple-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-happybirthday-to-simpleapp
spec:
  podSelector:
    matchLabels:
      app: simple-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: happybirthday
      ports:
        - protocol: TCP
          port: 8001
  policyTypes:
    - Ingress
